[package]
name = "udp-over-https"
version = "0.0.0"
description = "A proxy that does something neither efficient nor clean: proxy udp packets over a https-connection"
authors = ["jonas-kell"]
license = "MIT"
repository = "https://github.com/jonas-kell/udp-over-https"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.2", features = ["derive"] }
