[package]
name = "udp-over-https"
version = "0.0.0"
description = "A proxy that does something neither efficient nor clean: proxy udp packets over a https-connection"
authors = ["jonas-kell"]
license = "MIT"
repository = "https://github.com/jonas-kell/udp-over-https"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.2", features = ["derive"] }
actix-web = { version = "4.9" }
reqwest = "0.12.12"
serde = "1.0.217"
serde_json = "1.0.135"