[package]
name = "udp-over-https"
version = "0.0.0"
description = "A proxy that does something neither efficient nor clean: proxy udp packets over a https-connection"
authors = ["jonas-kell"]
license = "MIT"
repository = "https://github.com/jonas-kell/udp-over-https"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.2", features = ["derive"] }
actix-web = { version = "4.9" }
reqwest = { version = "0.12", features = ["json", "native-tls-alpn"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
async-channel = "2.3.1"

env_logger = "0.10"
log = "0.4"
log-once = "0.4"